5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4147/executions/1575_2896.log
== TEST (2019-03-20 07:49:51) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = imput("aiky")

# Impressao de saidas
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = imput("aiky")
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 07:52:18) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("aiky")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 07:52:21) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("aiky")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.182216
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
